// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Link should render with component as child 1`] = `
<div>
  <a
    class="sc-gsTCUz gohBcT"
    href="#"
  >
    <span
      class="sc-bdfBwQ ixTvTj"
    >
      Hi i am Name
    </span>
  </a>
</div>
`;

exports[`Link should render with default props 1`] = `
<div>
  <a
    class="sc-gsTCUz gohBcT"
    href="#"
  >
    <span
      class="sc-bdfBwQ eHPOzf"
    >
      Test
    </span>
  </a>
</div>
`;
